# group_number_4_assignment_2

./: CMakeLists.txt  README.md  package.xml
find_cubes/: CMakeLists.txt  package.xml
find_cubes/include/: find_cubes_position_node.hpp  find_goal_position_node.hpp
find_cubes/launch/: camera_36h11.launch.yml  find_cubes.launch.xml  find_goal.launch.xml
find_cubes/src/: find_cubes_position_node.cpp  find_goal_position_node.cpp  main.cpp
g4_launch/launch/: assignment_2.launch.xml
logic_controller/: CMakeLists.txt  package.xml
logic_controller/config/: swap_cubes.xml
logic_controller/include/logic_controller/: behaviour_tree.hpp
logic_controller/launch/: robot_logic_controller.xml
logic_controller/src/: robot_controller.cpp
motion_controller/: CMakeLists.txt  package.xml
motion_controller/include/motion_controller/: robot_manipulator.hpp
motion_controller/src/: main.cpp  robot_manipulator.cpp
motion_controller/srv/: SwapCubes.srv
